# matt-gpt

./: .gitignore  API_USAGE.md  CLAUDE.md  Procfile  add_sample_data.py  conversation_history.py  database.py  enhanced_retrievers.py  final_test.py  generate_matt_gpt_responses.py  generate_matt_gpt_responses_v2.py  investigate_message.py  llm_client.py  main.py  matt_gpt.py  migrate_add_conversation_id.py  models.py  process_text_messages.py  pyproject.toml  requirements.txt  retrievers.py  simplified_logging_summary.md  test_5_messages.py  test_api_call.py  test_authentication.py  test_db.py  test_enhanced_logging.py  test_integration.py  test_llm_client.py  test_personality_only.py  test_server_manager.py  test_text_processor.py  validate_setup.py
.claude/: chat_history_implementation_plan.md  settings.local.json
claude/: PHASE2_SUMMARY.md  console_example.md  console_example_2.md  digitalocean-deployment.md  master_plan.md  master_plan_prompt.md  phase2_issues.md  phase_one_complete.md  phase_two_complete.md  project_overview.md  scoped_planner_prompt.md
context/: distilled_personality_and_preferences.md  personality_report.md  writing_style.md
example_conversations/: decision_mate_transcript_data.csv  decision_mate_transcript_data_with_mattgpt.csv
inputs/: Fundamental Values.md  Intellectual Approach.md  Learning & Development Style.md  Morality.md  Personal Agency Orientation.md  Politics.md  Religion.md  Social Energy & Interaction Patterns.md  Spiritual.md  Trauma & Healing Approach.md
scripts/: analyze_existing_messages.py  check_data.py  init_db.py  (+19 more)
(+14 files in other folders)
